# Punto-de-Venta

./: .gitignore  README.md
backend/: README.md  db.sqlite3  pos.sqlite3  pyproject.toml
backend/analytics/: permissions.py  services.py  tests.py  urls.py  views.py
backend/api/: settings.py  urls.py
backend/chatbot/: models.py  serializers.py  tests.py  urls.py  views.py
backend/chatbot/migrations/: 0001_initial.py  0002_alter_chatbotusers_last_interaction.py  0003_alter_chatbotusers_last_interaction.py  0004_alter_chatbotusers_table.py
backend/customers/: models.py  serializers.py  tests.py  urls.py  views.py
backend/customers/migrations/: 0001_initial.py  0002_alter_customer_phone_number.py  0002_initial.py  0003_customer_credit_limit_customer_credit_used_and_more.py  0003_customer_current_points_pointstransaction.py  0004_customer_last_status_check.py  0005_customer_last_birthday_discount_year.py
backend/orders/: models.py  serializers.py  tests.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_status_alter_order_ticket_folio_and_more.py  0003_rename_subtotal_orderitems_amount_order_points_used_and_more.py  0004_order_discount_applied_order_final_amount_and_more.py  0004_remove_order_total.py  0005_alter_order_payment_method_alter_order_status.py  0005_order_money_saved_total.py
backend/products/: models.py  serializers.py  tests.py  urls.py  views.py
backend/suppliers/: models.py  serializers.py  tests.py  urls.py  views.py
backend/users/: models.py  serializers.py  tests.py  urls.py  views.py
(+70 files in other folders)
